Crash when changing asset icon #106976

Closed
opened 2023-04-15 01:25:14 +02:00 by Kent Davis · 40 comments
First-time contributor

Blender Version
Broken: version: 3.5
Worked: - (never, it is related to "All" which was introduced in 3.5)

Short description of error
Blender crash guide during ASSET open .png

Exact steps for others to reproduce the error

  • Set Interface > Temporary Editors > File Browser to open in maximized area
  • Mark cube as asset
  • Open Asset Browser
  • In side panel, change asset icon (any should do)

It will crash.

Note: It will only crash if library is "All".

**Blender Version** Broken: version: 3.5 Worked: - (never, it is related to "All" which was introduced in 3.5) **Short description of error** Blender crash guide during ASSET open .png **Exact steps for others to reproduce the error** * Set `Interface > Temporary Editors > File Browser` to open in maximized area * Mark cube as asset * Open Asset Browser * In side panel, change asset icon (any should do) It will crash. Note: It will only crash if library is "All".
Kent Davis added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-15 01:25:15 +02:00
Author
First-time contributor

@Harley
There

@Harley There
Member

Hi, thanks for the report. I'm not able to reproduce the crash.
Could you check again in latest build?: https://builder.blender.org/download/daily/
Does this happen with any other png file?

Call stack:
BKE_previewimg_id_custom_set
lib_id_load_custom_preview_exec(bContext*, wmOperator*)
wm_handler_fileselect_do(bContext*, ListBase*, wmEventHandler_Op*, int)
wm_handlers_do_intern(bContext*, wmWindow*, wmEvent*, ListBase*)
wm_handlers_do(bContext*, wmEvent*, ListBase*)
wm_event_do_handlers
WM_main
main
Hi, thanks for the report. I'm not able to reproduce the crash. Could you check again in latest build?: https://builder.blender.org/download/daily/ Does this happen with any other png file? ``` Call stack: BKE_previewimg_id_custom_set lib_id_load_custom_preview_exec(bContext*, wmOperator*) wm_handler_fileselect_do(bContext*, ListBase*, wmEventHandler_Op*, int) wm_handlers_do_intern(bContext*, wmWindow*, wmEvent*, ListBase*) wm_handlers_do(bContext*, wmEvent*, ListBase*) wm_event_do_handlers WM_main main ```
Author
First-time contributor

@PratikPB2123
Yes still crash latest version build on Blender 3.6.0 today already. for Mac.

@PratikPB2123 Yes still crash latest version build on Blender 3.6.0 today already. for Mac.
Member

Ok, thanks for the update

Does this happen with any other png file?

Any updates on this?


Also check if crash happens with .png which is not a part of asset library.

Ok, thanks for the update > Does this happen with any other png file? Any updates on this? - - - Also check if crash happens with .png which is not a part of asset library.
Author
First-time contributor

@PratikPB2123
Any PNG, JPG, and etc not matter.
Random select not matter still crash during open Asset button.
Open Folder button image

@PratikPB2123 Any PNG, JPG, and etc not matter. Random select not matter still crash during open Asset button. Open Folder button ![image](/attachments/4914f58d-88ec-43f0-8a61-405ea2f58295)
Author
First-time contributor

There crash file.

There crash file.
Author
First-time contributor

Other crash on latest version build.

Other crash on latest version build.
Member

Still unable to reproduce with local assets and your images.
Maybe irrelevant but could you check whether crash triggers with OpenGL backend?

Still unable to reproduce with local assets and your images. Maybe irrelevant but could you check whether crash triggers with OpenGL backend?
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-04-21 12:37:15 +02:00
Author
First-time contributor

I take test OpenGL and Metal also EEVEE and Cycles-x not matter what. Ignore about Metal, OpenGL and Cycles and EEVEE just very IGNORE. Only focus ASSET BROWSER Open Folder both not matter still CRASH!

image

I take test OpenGL and Metal also EEVEE and Cycles-x not matter what. Ignore about Metal, OpenGL and Cycles and EEVEE just very IGNORE. Only focus ASSET BROWSER Open Folder both not matter still CRASH! ![image](/attachments/3db0b60b-699a-4db7-a3b0-07e55cbcede2)
1.0 MiB
Author
First-time contributor

Ask some one for Mac not for Windows.

Ask some one for Mac not for Windows.
Member

@mano-wii , can you check?

@mano-wii , can you check?
Pratik Borhade added
Status
Needs Triage
and removed
Status
Needs Information from User
labels 2023-04-21 13:21:43 +02:00

Let me see if I understood the problem correctly.
Any .blend file, any Asset.
The described problem should occur when trying to change the preview image of an asset.

If these are the steps, I can't replicate:
Apr-21-2023 13-15-01.gif

Let me see if I understood the problem correctly. Any .blend file, any Asset. The described problem should occur when trying to change the preview image of an asset. If these are the steps, I can't replicate: ![Apr-21-2023 13-15-01.gif](/attachments/fa61e876-6c9a-45a1-9755-5475940a74d1)
Author
First-time contributor

@mano-wii
Are you sure your own iMac and other Macintosh?

@mano-wii Are you sure your own iMac and other Macintosh?

Maybe it's a problem with Macs with AMD.
@iss can you try?

My specs:

Operating system: macOS-13.2.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 1.2
Maybe it's a problem with Macs with AMD. @iss can you try? My specs: ``` Operating system: macOS-13.2.1-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 1.2 ```
Author
First-time contributor

Me Intel i5

Me Intel i5
Author
First-time contributor

@PratikPB2123
@mano-wii

I just found out. Library > Application Support > Blender > 3.6 folder is active make crash during open folder Asset Browser.
Without 3.6 folder and Asset Browser open is fine.
You can try my 3.6 folder through Show from hidden ~/Library

@PratikPB2123 @mano-wii I just found out. Library > Application Support > Blender > 3.6 folder is active make crash during open folder Asset Browser. Without 3.6 folder and Asset Browser open is fine. You can try my 3.6 folder through Show from hidden ~/Library
714 KiB
Author
First-time contributor

userpref.blend make crash. Let's test some more.
image

userpref.blend make crash. Let's test some more. ![image](/attachments/dfbaaaf9-9fdf-4cc6-b19c-1dc16b649618)
494 KiB
Author
First-time contributor

userpref.blend is very very sensitive crash when I setting special thing and ASSET Browser open folder and crash. I remove and resetting then crash after open folder. I try again until finally stop crash during asset open folder. I let you know.

userpref.blend is very very sensitive crash when I setting special thing and ASSET Browser open folder and crash. I remove and resetting then crash after open folder. I try again until finally stop crash during asset open folder. I let you know.
Author
First-time contributor

I FOUND OUT NOW!!! There is very bad crash!!! I am tell you.
image

I FOUND OUT NOW!!! There is very bad crash!!! I am tell you. ![image](/attachments/f2f0d3be-9849-49fa-82f8-10e1c6244537)
1.0 MiB
Author
First-time contributor

@PratikPB2123
Please check last my picture Temporary Editors Maximized Area can cause crash within Asset Browser open folder.

@PratikPB2123 Please check last my picture Temporary Editors Maximized Area can cause crash within Asset Browser open folder.

Can't reproduce this issue.

Can't reproduce this issue.
Author
First-time contributor

@iss
Why?

@iss Why?
Author
First-time contributor

I ask you why? you never answer me back.

I ask you why? you never answer me back.

Why I can't reproduce the issue? I can't tell why. Most likely due to different hardware I use.

Why I can't reproduce the issue? I can't tell why. Most likely due to different hardware I use.
Author
First-time contributor

Why I can't reproduce the issue? I can't tell why. Most likely due to different hardware I use.

Why not you need use Preferences:

  1. ==========
    Temporary Editor:
    Render In: Maximized Area
    File Browser: Maximized Area
    first
    image

  2. ==========
    Then go to Asset Browser
    image

  3. ==========
    Open folder icon button small one.
    image

  4. ==========
    Any .png and .jpg then click (Load Cust...) button make crash.
    image

> Why I can't reproduce the issue? I can't tell why. Most likely due to different hardware I use. Why not you need use Preferences: 1. ========== Temporary Editor: Render In: Maximized Area File Browser: Maximized Area first ![image](/attachments/3bbf5338-8f0f-4886-a486-94463637ac6e) 2. ========== Then go to Asset Browser ![image](/attachments/41045d43-1ed9-4029-9be1-aa4fd2144688) 3. ========== Open folder icon button small one. ![image](/attachments/3e0c090b-973a-48fa-8206-9c2774540b80) 4. ========== Any .png and .jpg then click (Load Cust...) button make crash. ![image](/attachments/8bf6f674-78b8-4891-a959-29feaccf2039)

I have re-checked just in case, and I was able to reproduce now, so will confirm.

I have re-checked just in case, and I was able to reproduce now, so will confirm.
Richard Antalik changed title from Blender crash guide during ASSET open .png to Crash when changing asset icon 2023-05-23 05:56:27 +02:00
Author
First-time contributor

Thanks

Thanks

This happens in 3.5 as well, not only 3.6 (and on Linux too by the way).
cc @JulianEisel

This happens in 3.5 as well, not only 3.6 (and on Linux too by the way). cc @JulianEisel
Dalai Felinto added
Type
Bug
and removed
Type
Report
Platform
macOS
labels 2023-05-26 11:00:57 +02:00
Member

#108066 could be merged into this report if crash is platform independent

#108066 could be merged into this report if crash is platform independent

The issue seems to be that CTX_data_pointer_get(C, "id") returns NULL when called from lib_id_load_custom_preview_exec in this case.

The issue seems to be that `CTX_data_pointer_get(C, "id")` returns NULL when called from `lib_id_load_custom_preview_exec` in this case.

@PratikPB2123 it can be merged. Not sure how to do it in the new system to be honest.

@PratikPB2123 it can be merged. Not sure how to do it in the new system to be honest.
Author
First-time contributor

This happens in 3.5 as well, not only 3.6 (and on Linux too by the way).
cc @JulianEisel

Yes.

@PratikPB2123 Yes merge

Edit > Preferences and Add-ons Install is fine.
File > Open is fine.
Asset Browser open (Folder icon) CRASH
that why
image
Don't forget about this picture.

> This happens in 3.5 as well, not only 3.6 (and on Linux too by the way). > cc @JulianEisel Yes. @PratikPB2123 Yes merge Edit > Preferences and Add-ons Install is fine. File > Open is fine. Asset Browser open (Folder icon) CRASH that why ![image](/attachments/7aa943ef-f0ad-42db-a21c-964a8fa4ad2e) Don't forget about this picture.
153 KiB
Member

Not sure if this is a regression (I suspect this is affected by new "all" option).

  • Crash triggers when "all" is selected as asset preference
  • If file is a part of asset library, crash will happen with "user library" and "all" libraries
  • If "current file" library is selected, crash will not happen
Not sure if this is a regression (I suspect this is affected by new "all" option). - Crash triggers when "all" is selected as asset preference - If file is a part of asset library, crash will happen with "user library" and "all" libraries - If "current file" library is selected, crash will not happen
Author
First-time contributor

Not sure if this is a regression (I suspect this is affected by new "all" option).

  • Crash triggers when "all" is selected as asset preference
  • If file is a part of asset library, crash will happen with "user library" and "all" libraries
  • If "current file" library is selected, crash will not happen

No, Not talk about "ALL". I talk about "Maximized Area" cause Asset Browser open crash.

See youtube: https://youtu.be/r5gjmBsBvyc

> Not sure if this is a regression (I suspect this is affected by new "all" option). > - Crash triggers when "all" is selected as asset preference > - If file is a part of asset library, crash will happen with "user library" and "all" libraries > - If "current file" library is selected, crash will not happen No, Not talk about "ALL". I talk about "Maximized Area" cause Asset Browser open crash. See youtube: https://youtu.be/r5gjmBsBvyc

Great finding @PratikPB2123, I updated the task description

Great finding @PratikPB2123, I updated the task description
Member

Fixed with b1b8091667.

Fixed with b1b8091667.
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-06-01 17:34:02 +02:00
Author
First-time contributor

Thanks. Yes resolve!

Thanks. Yes resolve!
Member

Will put the fix on #109399 if you dont mind @JulianEisel

Will put the fix on #109399 if you dont mind @JulianEisel
Member

@lichtwerk seems fine.

@lichtwerk seems fine.
Author
First-time contributor

It fixed long time ago. Blender 3.6.0 and 4.0.0 on Asset open file. I check again today still it worked.

It fixed long time ago. Blender 3.6.0 and 4.0.0 on Asset open file. I check again today still it worked.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106976
No description provided.